<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textSize="15sp"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/textViewTitle"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/abc_list_longpressed_holo" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageViewLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/editTextEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <CheckBox
            android:id="@+id/checkBoxRememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginTop="15dp"
            android:text="@string/rememberme" />

        <TextView
            android:id="@+id/textViewForgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxRememberme"
            android:layout_alignBottom="@+id/checkBoxRememberme"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/background_dark"
            android:text="@string/forgotpassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/checkBoxRememberme"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/background_dark"
            android:text="@string/signup" />

        <View
            android:id="@+id/orline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewSignup"
            android:layout_marginTop="10dp"
            android:background="@drawable/or" />

        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/orline1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/facebook_btn"
            android:text="@string/facebooksignin" />

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/buttonFacebook"
            android:layout_centerHorizontal="true"
            android:background="@drawable/g_plus_btn"
            android:layout_marginTop="10dp"
            android:text="@string/googleplussignin" />
    </RelativeLayout>

</ScrollView>